force-app/main/default/objects/leaseworks__Payment_Line_Item__c/leaseworks__Payment_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Line Items that constitute the invoice details</description>
    <label>View Payment Line Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>View Payment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>