force-app/main/default/objects/leaseworks__Payment_Line_Item__c/fields/leaseworks__Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount_Paid__c</fullName>
    <description>Amount Paid</description>
    <label>Payment Line Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>