force-app/main/default/objects/leaseworks__Payment_Line_Item__c/fields/leaseworks__Amount_Paid_Local_Currency_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount_Paid_Local_Currency_F__c</fullName>
    <formula>leaseworks__Amount_Paid__c *  leaseworks__Payment__r.leaseworks__Invoice__r.leaseworks__Conversion_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Paid (Local Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>