force-app/main/default/objects/leaseworks__Payment_Line_Item__c/fields/leaseworks__Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Exchange_Rate__c</fullName>
    <description>The rate of exchange between the foreign currency and base currency based on the selected date</description>
    <formula>leaseworks__Payment__r.leaseworks__Exchange_Rate__c</formula>
    <inlineHelpText>The rate of exchange between the foreign currency and base currency based on the selected date</inlineHelpText>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>