force-app/main/default/objects/leaseworks__Payment_Line_Item__c/fields/leaseworks__Invoice_Line_Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Line_Amount_Outstanding__c</fullName>
    <description>Balance due on invoice line item after Payment creation and updation.</description>
    <formula>leaseworks__Invoice_Line_Item__r.leaseworks__Balance_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Balance due on invoice line item after Payment creation and updation</inlineHelpText>
    <label>Invoice Line Amount Outstanding($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>