force-app/main/default/objects/leaseworks__Payment_Line_Item__c/fields/leaseworks__Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Type__c</fullName>
    <description>Indicates the invoice type</description>
    <formula>leaseworks__Payment__r.leaseworks__Invoice_Type_F__c</formula>
    <inlineHelpText>Indicates the invoice type</inlineHelpText>
    <label>Invoice Type</label>
    <type>Text</type>
</CustomField>