force-app/main/default/objects/leaseworks__Payment_Line_Item__c/fields/leaseworks__Lease_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_F__c</fullName>
    <formula>leaseworks__Payment__r.leaseworks__Invoice__r.leaseworks__Lease__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease_F</label>
    <type>Text</type>
</CustomField>