force-app/main/default/objects/leaseworks__Payment_Line_Item__c/fields/leaseworks__Line_Currency__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Line_Currency__c</fullName>
    <description>Indicates the payment line item currency, which is set according to the currency specified on the payment.</description>
    <formula>leaseworks__Payment__r.leaseworks__Transaction_Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the payment line item currency, which is set according to the currency specified on the payment.</inlineHelpText>
    <label>Line Currency</label>
    <type>Text</type>
</CustomField>