force-app/main/default/objects/leaseworks__Payment_Line_Item__c/fields/leaseworks__Override__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then the auto allocated payment amount was overridden by the user. Uncheck to revert back to auto calculated amount</description>
    <inlineHelpText>If checked, then the auto allocated payment amount was overridden by the user. Uncheck to revert back to auto calculated amount</inlineHelpText>
    <label>Override</label>
    <type>Checkbox</type>
</CustomField>