force-app/main/default/objects/leaseworks__Payment_Line_Item__c/fields/leaseworks__Payment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payment__c</fullName>
    <label>Payment</label>
    <referenceTo>leaseworks__Payment__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Payment_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>