force-app/main/default/objects/leaseworks__Payment_Line_Item__c/fields/leaseworks__Payment_Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payment_Credit_Memo__c</fullName>
    <description>Note : This field has a dependency on Payment/Credit Memo(Payment_Type__c) field of Payments&amp;Credits(Payment__c). Please make necessary changes in both fields if updating</description>
    <formula>case (TEXT(leaseworks__Payment__r.leaseworks__Payment_Type__c),
    &#39;Cash&#39;, &#39;Cash Payment&#39;,
    &#39;CN_Payment&#39;, &#39;Credit Memo&#39;,
    &#39;Paid via LoC Offset&#39;, &#39;Paid via LoC Offset&#39;,
    &#39;Paid via Payable Offset&#39;, &#39;Paid via Payable Offset&#39;,
    &#39;Paid via SD Offset&#39;, &#39;Paid via SD Offset&#39;,
    &#39;&#39;
)</formula>
    <label>Payment/Credit Memo</label>
    <type>Text</type>
</CustomField>