force-app/main/default/objects/leaseworks__Payment_Line_Item__c/fields/leaseworks__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payment_Date__c</fullName>
    <formula>leaseworks__Payment__r.leaseworks__Payment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Payment Date</label>
    <type>Date</type>
</CustomField>