force-app/main/default/objects/leaseworks__Payment_Line_Item__c/fields/leaseworks__Prev_Line_Amount_Unapplied__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Prev_Line_Amount_Unapplied__c</fullName>
    <description>This field will display the &#39;Payment Line Amount&#39; when a partial unallocation is done this field will display the previous unallocated amount based on the action done one or multiple times.</description>
    <inlineHelpText>Displays the cash amount that has been previously unallocated from this payment line.</inlineHelpText>
    <label>_Prev Line Amount Unapplied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>