force-app/main/default/objects/leaseworks__Payment_Line_Item__c/fields/leaseworks__Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Status__c</fullName>
    <formula>TEXT(leaseworks__Payment__r.leaseworks__Payment_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>