force-app/main/default/objects/leaseworks__Payment_Line_Item__c/recordTypes/leaseworks__MR.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__MR</fullName>
    <active>true</active>
    <description>This record type is applicable for MR payments</description>
    <label>MR</label>
</RecordType>