force-app/main/default/objects/leaseworks__Payment_Line_Item__c/recordTypes/leaseworks__Non_MR.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Non_MR</fullName>
    <active>true</active>
    <description>This record type is applicable for Non MR payments</description>
    <label>Non MR</label>
</RecordType>